* Remove unnecessary object creation * Replace object creation with equivalent valueOf() method * Fix error messages in setters